# SmartComPlatform

./: .gitignore  README.md
services/communicationservice/: CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md
services/communicationservice/.devcontainer/: devcontainer.json
services/communicationservice/configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
services/communicationservice/postgresql/: schemas_description.txt
services/communicationservice/postgresql/queries/: change_task_status.sql  create_connection.sql  create_contact_and_add_to_the_user_group.sql  create_message.sql  create_note.sql  create_origin_and_add_to_the_user_group.sql  create_origin_connection.sql  create_task.sql  get_ai_spellingchecker_settings.sql  get_ai_taskproposer_settings.sql  get_all_connections_by_contact.sql  get_all_contacts.sql  get_all_expired_tasks_by_user.sql  get_all_messages_by_contact.sql  get_all_notes_by_contact.sql  get_all_origin_connections.sql  get_all_origins.sql  get_connection.sql  get_identifier_by_contact_and_channel.sql  get_job_channel.sql  get_job_route.sql  get_last_unprocessed_messages.sql  get_origin.sql  get_origin_by_origin_connection_id.sql  get_origin_connection.sql  get_pending_jobs.sql  get_settings.sql  get_tasks_by_status.sql  insert_child.sql  insert_message_job.sql  insert_sms_job.sql  modify_contact.sql  modify_origin.sql  select_child_by_id.sql  set_spell_check_configuration.sql  set_task_propose_configuration.sql  update_job_status.sql  update_settings.sql
services/communicationservice/postgresql/schemas/: 001__create_table_connection.sql  001__create_table_contact.sql  001__create_table_users.sql  002__create_table_connection.sql  002__create_table_user_connections.sql  003__create_table_contact_message_jobs.sql  004__create_contacts_ownership_relations.sql  005__create_table_origin.sql  006__create_table_origin_connection.sql  007__create_origins_ownership_relations.sql  008__create_table_contact_message_jobs.sql  009__create_table_message.sql  010__create_tables_organization.sql  011__crate_tables_organization_groups.sql  012__create_table_ai_spellchecker_settings.sql  013__create_table_contact_task.sql  014__create_table_contact_notes.sql  015__create_table_greeting_message.sql  016__create_table_ai_taskproposer_settings.sql
services/communicationservice/schemas/api/v1/: .openapi.yaml.swo  openapi.yaml
services/communicationservice/src/: greeting.cpp  greeting.hpp  greeting_benchmark.cpp  hello.cpp  hello_postgres.cpp  hello_postgres.hpp  main.cpp
services/communicationservice/src/components/: EmailMessageFetcher.cpp  EmailMessageFetcher.hpp  MessageDispatcher.cpp  MessageDispatcher.hpp  SmsDispatcher.cpp  SmsDispatcher.hpp  TelegramMessageFetcher.cpp  TelegramMessageFetcher.hpp
services/communicationservice/src/components/resolver/: ChannelResolver.cpp  ChannelResolver.hpp
services/communicationservice/src/components/sender/: EmailSender.cpp  EmailSender.hpp  IMessageSender.hpp  SenderRegistry.cpp  SenderRegistry.hpp  SmsAeroSender.cpp  SmsAeroSender.hpp  SmsSender.cpp  SmsSender.hpp  TelegramSender.cpp  TelegramSender.hpp
services/communicationservice/src/handlers/v1/: ChannelTypeEnumToString.hpp  CreateContact.cpp  (+10 more)
services/communicationservice/tests/: conftest.py
(+152 files in other folders)
